--- a/accueil.html
+++ b/accueil.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-		<link href="../css/proj.css" rel="stylesheet">
-		<link type="../css/proj.css" rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:500" />
+		<link href="css/proj.css" rel="stylesheet">
+		<link type="css/proj.css" rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:500" />
 	</head>
 
 <body>
@@ -39,7 +39,7 @@
 			<div class="text2">Valentin Pouchin</div>
 			<div class="text3">Je suis étudiant en <span>BTS Sio</span> à Supavenir Sainte-Ursule</div>
 			<div class="bouton1"><a href="apropos.html">A propos de moi !</a></div>
-			<div class="photo"><img src="../img/photocv.jpg" style="width: 100%";="Photo CV" height="250" width="250"></div>
+			<div class="photo"><img src="img/photocv.jpg" style="width: 100%";="Photo CV" height="250" width="250"></div>
 		</div>
 </body>
 
